@@ -2,6 +2,7 @@ Revision history for Perl extension Bot-BasicBot-Pluggable-FromConfig
 
 {{$NEXT}}
 
+    - added tests for config file format loading
     - added module for running bots from config
     - original version
 
